<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical" android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/theme_white">

    <ImageView
        android:id="@+id/sort_cover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/song_cover"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/sort_song_name"
        android:singleLine="true"
        android:ellipsize="end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/sort_slow_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/slow_playlist"
            android:layout_height="match_parent"
            android:textColor="@color/theme_red"
            android:tag="0"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/theme_red"
            android:layout_marginTop="@dimen/space_big"
            android:layout_marginBottom="@dimen/space_big"
            />


        <Button
            android:id="@+id/sort_normal_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/normal_playlist"
            android:layout_height="match_parent"
            android:textColor="@color/theme_red"
            android:tag="1"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/theme_red"
            android:layout_marginTop="@dimen/space_big"
            android:layout_marginBottom="@dimen/space_big"
            />


        <Button
            android:id="@+id/sort_move_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/move_playlist"
            android:layout_height="match_parent"
            android:textColor="@color/theme_red"
            android:tag="2"/>

    </LinearLayout>

</LinearLayout>